# tanc

./: .gitignore  Cargo.toml  LICENSE
core/: Cargo.toml
core/src/: index.rs  lib.rs  path.rs  server.rs  srcbuf.rs
core/src/index/: ast_index.rs  ast_path.rs  consume_ast.rs  pos_index.rs  test.rs
tanc/: Cargo.toml
