[package]
name = "tanc_core"
version = "0.0.1"
authors = ["Lee Olayvar <leegit@fastmail.com>"]
edition = "2021"
license-file = "LICENSE"

[lib]
name = "tanc_core"
path = "src/lib.rs"

[dependencies]
tracing.workspace = true
thiserror.workspace = true
tower-lsp = "0.19"
tokio = { workspace = true, features = ["io-std"] }
rnix = "0.11"
compact_str = "0.7"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "test-util"] }
